--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar justify-content-center" style="background-color: #34a4b8e5;">
       <div class="container-fluid">
-        <a class="navbar-brand">Home</a>
+        <a class="navbar-brand"><i class="fa-solid fa-house"></i> Home </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,7 +28,7 @@
             <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://karimi65.github.io/links/">Link</a>
+              <a class="nav-link" href="https://karimi65.github.io/links/">Links</a>
             </li>
           </ul>
         </div>
@@ -38,27 +38,30 @@
     <div class="items">
 
       <div class="banner">
-        <img src="/links/thumbnails/profile-pic.jpg" alt="Mohammad Ali Karimi headshot" class="banner-image">
+        <img src="/assets/images/profile.jpg" alt="Mohammad Ali Karimi headshot" class="banner-image">
       </div>
 
-      <div class="name">
+      <div class="name mb-0">
         Mohammad Ali Karimi
       </div>
+      <span class="title">Software Developer</span>
+
+      <div class="skill-icons">
+        <i class="fa-brands fa-js fa-xl"></i> <i class="fa-brands fa-html5 fa-xl"></i> <i class="fa-brands fa-css3-alt fa-xl"></i> <i class="fa-brands fa-node fa-xl"></i> <i class="fa-solid fa-gem fa-xl"></i> <i class="fa-brands fa-bootstrap fa-xl"> </i> <i class="fa-brands fa-git fa-xl"></i> 
+      </div> 
+
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      </p>
 
       <div class="social-icons">
-        <a href="https://github.com/karimi65" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
-        <a href="https://www.linkedin.com/in/mohammad-ali-karimi/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
 
-      </div>
+        <a href="mailto: ali216k@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-2xl"></i></a>
 
-      <div class="link">
-        <img class="thumbnail" src="/links/thumbnails/pbl.png" alt="learning">
-        <a href="https://github.com/practical-tutorials/project-based-learning" target="_blank">Be an active learner! (Project-based learning)</a>
-      </div>
+        <a href="https://github.com/karimi65" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
 
-      <div class="link">
-        <img class="thumbnail" src="/links/thumbnails/build.jpg" alt="build">
-        <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank">Build your own!</a>
+        <a href="https://www.linkedin.com/in/mohammad-ali-karimi/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+
       </div>
 
     </div>
@@ -71,242 +74,8 @@
 
 
 
+   
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-
-  <body id="about">
-    <nav
-      class="navbar navbar-expand-lg navbar-dark"
-      style="background-color: cadetblue"
-    >
-      <span class="navbar-brand mb-0" id="brand">Mohammad Ali</span>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./assets/Mohammad-Ali-Karimi.pdf"
-              >Resume</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container mt-5" id="my-info">
-      <div class="row mb-3">
-        <div class="col-md-6">
-          <h2>About Me</h2>
-          <p>
-            Hi,<br />
-            My name is <span id="name">Mohammad Ali Karimi</span>. I am from
-            Afghanistan and came to the USA in 2017. I have a bachelor in
-            electrical engineering; since I’m interested in programming and web
-            development, I decided to take Bootcamp classes and change my
-            career. In this journey, I’m trying to work hard and practice a lot
-            to learn more.
-          </p>
-        </div>
-
-        <div class="col-md-6">
-          <img
-            src="./assets/images/DSC_1142.JPG"
-            alt="Me"
-            class="img-fluid"
-            width="400"
-            height="400"
-            id="me"
-          />
-        </div>
-      </div>
-
-      <div class="row mb-5 mt-5">
-        <div class="col-md-6">
-          <h3>Skills:</h3>
-          <ul>
-            <li>
-              <i class="fa fa-html5 fa-2x"></i>
-              HTML
-            </li>
-            <li>
-              <i class="fa fa-css3 fa-2x"></i>
-              CSS
-            </li>
-            <li>
-              <i class="fa fa-js-square fa-2x"></i>
-              JavaScript
-            </li>
-            <li>
-              <i class="fa fa-react fa-2x"></i>
-              React
-            </li>
-            <li>
-              <i class="fa fa-node fa-2x"></i>
-              Node.js
-            </li>
-            <li>MySQL</li>
-            <li>Express</li>
-            <li>MongoDB</li>
-          </ul>
-        </div>
-
-        <div class="col-md-6">
-          <h3>My Hobbies:</h3>
-          <div>
-            <ul>
-              <li>Watching soccer games</li>
-              <li>Reading books</li>
-              <li>Walking and listening to music and podcasts</li>
-            </ul>
-          </div>
-          <h3>Email:</h3>
-          <a href="mailto:ali216k@gmail.com" target="_blank" id="Email"
-            >ali216k@gmail.com</a
-          >
-        </div>
-      </div>
-    </div>
-    <-- /.container -->
-
-<!-- <footer class="container-fluid p-1 text-dark text-center">
-      <a
-        href="https://github.com/karimi65"
-        target="_blank"
-        title="Mohammad-Ali's Github Account"
-      >
-        <i class="fa fa-github fa-2x mr-2" aria-hidden="true"></i>
-      </a>
-      <a
-        href="https://www.linkedin.com/in/mohammad-ali-karimi-b83181156/"
-        target="_blank"
-        title="Mohammad-Ali's linkedin Account"
-        ><i class="fa fa-linkedin fa-2x ml-2" aria-hidden="true"></i
-      ></a>
-    </footer>
-  </body>
-
-  <script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"
-  ></script>
-</html>  -->
