--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
       <div class="container" id="my-portfolio"> 
         <div class="alert alert-success" role="alert">
-          <h1>Wlcome!</h1>
+          <h1>Welcome!</h1>
         </div>
   
         <div class="row mb-3">
