--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <mata charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> 
@@ -19,7 +19,7 @@
         <div class="projcard-innerbox">
           <img class="projcard-img" src="assets/images/project1.JPG" />
           <div class="projcard-textbox">
-            <div class="projcard-title">Card Title</div>
+            <div class="projcard-title">Project 1</div>
             <div class="projcard-subtitle">This explains the card in more detail</div>
             <div class="projcard-bar"></div>
             <div class="projcard-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
