--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,13 @@
 		
       <div class="projcard projcard-blue">
         <div class="projcard-innerbox">
-          <img class="projcard-img" src="assets/images/project1.JPG" />
+          <a href="https://github.com/karimi65/work-day-scheduler"><img class="projcard-img" src="assets/images/project1.JPG"/></a>
           <div class="projcard-textbox">
             <div class="projcard-title">Project 1</div>
-            <div class="projcard-subtitle">This explains the card in more detail</div>
+            <div class="projcard-subtitle">Work-day Scheduler</div>
             <div class="projcard-bar"></div>
-            <div class="projcard-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+            <div class="projcard-description">This application allows users to schedule their time and save any
+              event or activity for each hour of the day from 9:00 am to 5:00 pm</div>
             <div class="projcard-tagbox">
               <span class="projcard-tag">HTML</span>
               <span class="projcard-tag">CSS</span>
@@ -33,12 +34,14 @@
       
       <div class="projcard projcard-red">
         <div class="projcard-innerbox">
-          <img class="projcard-img" src="assets/images/project2.JPG" />
+          <a href=" https://github.com/karimi65/password-generator"><img class="projcard-img" src="assets/images/project2.JPG"/></a>
           <div class="projcard-textbox">
-            <div class="projcard-title">That's Another Card</div>
-            <div class="projcard-subtitle">I don't really think that I need to explain anything here</div>
+            <div class="projcard-title">Project 2</div>
+            <div class="projcard-subtitle">Password Generator</div>
             <div class="projcard-bar"></div>
-            <div class="projcard-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+            <div class="projcard-description">An application that enables
+              employees to generate random passwords based on the criteria that
+              they've selected.</div>
             <div class="projcard-tagbox">
               <span class="projcard-tag">PHP</span>
               <span class="projcard-tag">SQL</span>
@@ -50,12 +53,13 @@
       
       <div class="projcard projcard-green">
         <div class="projcard-innerbox">
-          <img class="projcard-img" src="assets/images/project3.JPG" />
+          <a href="https://github.com/karimi65/burger"><img class="projcard-img" src="assets/images/project3.JPG"/></a>
           <div class="projcard-textbox">
-            <div class="projcard-title">And a Third Card</div>
-            <div class="projcard-subtitle">You know what this is by now</div>
+            <div class="projcard-title">Project 3</div>
+            <div class="projcard-subtitle">Eat Da Burger</div>
             <div class="projcard-bar"></div>
-            <div class="projcard-description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</div>
+            <div class="projcard-description">It is a restaurant app that lets
+              users input the names of burgers they'd like to eat.</div>
             <div class="projcard-tagbox">
               <span class="projcard-tag">Excel</span>
               <span class="projcard-tag">VBA</span>
@@ -68,8 +72,8 @@
         <div class="projcard-innerbox">
           <img class="projcard-img" src="" />
           <div class="projcard-textbox">
-            <div class="projcard-title">Last Card</div>
-            <div class="projcard-subtitle">That's the last one. Have a nice day!</div>
+            <div class="projcard-title">Project 4</div>
+            <div class="projcard-subtitle">Delivery Tracker</div>
             <div class="projcard-bar"></div>
             <div class="projcard-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
             <div class="projcard-tagbox">
