--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-    <mata charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <mata charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mohammad Ali Karimi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      crossorigin="anonymous"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
-
   </head>
 
   <body>
-
-    <nav class="navbar justify-content-center mb-3" style="background-color: #34a4b8e5;">
+    <nav
+      class="navbar justify-content-center mb-3"
+      style="background-color: #34a4b8e5"
+    >
       <div class="container-fluid">
         <a class="navbar-brand"><i class="fa-solid fa-house"></i> Home </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"></li>
             <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://karimi65.github.io/links/">Links</a>
+              <a class="nav-link" href="https://karimi65.github.io/links/"
+                >Links</a
+              >
             </li>
           </ul>
         </div>
@@ -36,49 +50,61 @@
     </nav>
 
     <div class="items">
-
       <div class="banner">
-        <img src="/assets/images/profile.jpg" alt="Mohammad Ali Karimi headshot" class="banner-image">
+        <img
+          src="/assets/images/profile.jpg"
+          alt="Mohammad Ali Karimi headshot"
+          class="banner-image"
+        />
       </div>
 
-      <div class="name">
-        Mohammad Ali Karimi
-      </div>
+      <div class="name">Mohammad Ali Karimi</div>
+      <div class="social-icons">
+        <a href="mailto: ali216k@gmail.com" target="_blank"
+          ><i class="fa-solid fa-envelope fa-2xl"></i
+        ></a>
 
-      <div class="title">
-        Software Developer
-      </div>
+        <a href="https://github.com/karimi65" target="_blank"
+          ><i class="fa-brands fa-github fa-2xl"></i
+        ></a>
 
-      <div class="skill-icons">
-        <i class="fa-brands fa-js fa-xl"></i> <i class="fa-brands fa-html5 fa-xl"></i> <i class="fa-brands fa-css3-alt fa-xl"></i> <i class="fa-brands fa-node fa-xl"></i> <i class="fa-solid fa-gem fa-xl"></i> <i class="fa-brands fa-bootstrap fa-xl"> </i> <i class="fa-brands fa-git fa-xl"></i> 
-      </div> 
+        <a
+          href="https://www.linkedin.com/in/mohammad-ali-karimi/"
+          target="_blank"
+          ><i class="fa-brands fa-linkedin fa-2xl"></i
+        ></a>
+      </div>
 
       <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        "Hello, I'm Mohammad Ali, and I have a background in electrical
+        engineering with a strong passion for software development. I understand
+        how to design and build electronic devices, but my expertise extends
+        beyond hardware. I'm also skilled in programming and understand software
+        development. My combination of skills allows me to bridge the gap
+        between hardware and software, creating seamless and efficient systems.
+        I'm always eager to learn about new technologies and programming
+        languages.
       </p>
 
-      <div class="social-icons">
-
-        <a href="mailto: ali216k@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-2xl"></i></a>
-
-        <a href="https://github.com/karimi65" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
-
-        <a href="https://www.linkedin.com/in/mohammad-ali-karimi/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-
+      <div>
+        <p>I am most comfortable using the following technologies:</p>
       </div>
-
+      <div class="skill-icons">
+        <span><i class="fa-brands fa-js"></i> JavaScript</span>
+        <span><i class="fa-brands fa-html5"></i> HTML</span>
+        <span><i class="fa-brands fa-css3-alt"></i> CSS</span>
+        <i class="fa-brands fa-node fa-2xl"></i>
+        <i class="fa-brands fa-git fa-xl"></i>
+        <span><i class="fa-solid fa-gem"></i> Ruby</span>
+        <span><i class="fa-brands fa-bootstrap"> </i> Bootstrap</span>
+        <span><i class="fa-solid fa-database"></i> Database</span>
+      </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"
+    ></script>
   </body>
-
 </html>
-
-
-
-
-   
-
-
-
-
